compiler/fir/analysis-tests/testData/resolve/diagnostics/classInSupertypeForEnum.kt
class A

interface C

enum class B : C, <!CLASS_IN_SUPERTYPE_FOR_ENUM!>A<!>(), Any()